--- a/R_C14_rates calculation/1_Map, CTD, nutrients, cell abund/CTD_nutrients_data_2.0.Rmd
+++ b/R_C14_rates calculation/1_Map, CTD, nutrients, cell abund/CTD_nutrients_data_2.0.Rmd
@@ -60,7 +60,8 @@ CTD_raw <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
   mutate(date = date(datetime)) %>%
   mutate(time = hour(datetime)) %>%
   mutate(julian_day = julian(date, origin = date("2018-01-01"))) %>%
-  filter(time %in% (9:12) ) %>% # only morning CTD
+  # filter(time %in% (0:3)) %>% 
+  filter(time %in% (9:12) ) %>%# only morning CTD
   mutate(t_mean = (t+t2)/2) %>% # each CTD has 2 readings. use the average of the two readings.
   mutate(s_mean = (s+s2)/2) %>%
   mutate(os_mean = (os+os2)/2) %>%
@@ -68,12 +69,13 @@ CTD_raw <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
   filter(p <= 150)
 CTD_raw
 #check CTD,  date, time
-check <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
-  dplyr::rename(CTD = `cast`) %>%
-  mutate(datetime =  dmy_hms(datetime)) %>%
-  filter(!is.na(t)) %>%
-  mutate(date = date(datetime)) %>%
-  mutate(time = hour(datetime)) %>%
+# check <- readxl::read_excel(here("0_data_used", "TK_CTD Downcasts.xlsx")) %>%
+#   dplyr::rename(CTD = `cast`) %>%
+#   mutate(datetime =  dmy_hms(datetime)) %>%
+#   filter(!is.na(t)) %>%
+#   mutate(date = date(datetime)) %>%
+#   mutate(time = hour(datetime))  %>%
+CTD_raw %>%
   select(date,time) %>%
   distinct()
 ```
@@ -129,7 +131,7 @@ check
 ```
 ## Plots
 
-## Main Figure 1 - T-S, flourescence
+## Main Figure 1 - T-S
 
 ```{r}
 ts_plot <- CTD %>%
@@ -146,44 +148,6 @@ ts_plot <- CTD %>%
 
 ts_plot
 
-f_plot <- CTD %>%
-  filter(fl <=4.5) %>%
-  group_by(cycle_name, CTD) %>%
-  group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
-  ggplot(aes(x=fl, y=p, colour=cycle_name)) + 
-  geom_smooth(orientation = "y", method = "gam") +
-   # geom_point(size=0.01, alpha = 0.6) +
-  scale_y_reverse(limits = c(150,0))+
-  ylab("Depth (m)")+
-  xlab("Fluorescence (mg/m3)") +
-  labs(colour = "Cycle") +
-  scale_colour_manual(values = colours_cycle) 
-
-f_plot
-
-# merge plots
-CTD_figure <- plot_grid(
-  ts_plot+ theme(legend.position="none"), 
-  f_plot+ theme(legend.position="none"),
-  labels = c("A", "B"), 
-  align = 'vh',
-  hjust = -1,
-  nrow = 1) 
-
-# extract a legend that is laid out horizontally
-legend_b <- get_legend(
-  ts_plot + 
-    guides(color = guide_legend(nrow = 1)) +
-    theme(legend.position = "top")
-)
-
-# add the legend underneath the row we made earlier. Give it 10%
-# of the height of one plot (via rel_heights).
-CTD_figure <- plot_grid(CTD_figure, legend_b, ncol = 1, rel_heights = c(1, .1))
-
-CTD_figure
-
-pdf("figures/4_ctd nutrients/ctd_ts_v2.pdf", height=5, width=7) ; plot(CTD_figure) ; dev.off()
 ```
 
 ## Supplementary
@@ -193,7 +157,7 @@ pdf("figures/4_ctd nutrients/ctd_ts_v2.pdf", height=5, width=7) ; plot(CTD_figur
 temp_plot <- CTD %>%
   group_by(cycle_name, CTD) %>%
   group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
-  ggplot(aes(x=t_mean, y=p, colour=cycle_name)) + 
+  ggplot(aes(x=t_mean, y=p, colour=cycle_name)) +
  geom_point(size=0.02, alpha = 0.6) +
  # geom_path(size=0.1)+
   geom_smooth(orientation = "y", method = "loess", se = FALSE) +
@@ -458,7 +422,7 @@ Cell abundance values
 ## Read data
 ```{r}
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `SAMPLE`, `STN`, `DEPTH`, `CTD#`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
