--- a/R_C14_rates calculation/2_Chl a and NPP/Chla_npp_3.0.Rmd
+++ b/R_C14_rates calculation/2_Chl a and NPP/Chla_npp_3.0.Rmd
@@ -23,7 +23,7 @@ colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 # NPP data
 
 ```{r}
-npp_raw <- readxl::read_excel(here("0_data_used", "TAN1810_NPP_areal_2.0.xlsx"))%>%
+npp_raw <- readxl::read_excel(here("0_data_used", "TAN1810_NPP_areal_2.1.xlsx"))%>%
   select(Cycle, Station, Depth, U_Cast, mean_NPP, sd_NPP, areal_PP) %>%
   distinct() %>%
   mutate(cycle_name = dplyr::recode(Cycle, "1" = "SA-Sc",
@@ -38,7 +38,7 @@ npp_raw <- readxl::read_excel(here("0_data_used", "TAN1810_NPP_areal_2.0.xlsx"))
 npp_raw$CTD <- sub("^", "U", npp_raw$CTD)
 
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `CTD#`,`STN`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -66,7 +66,7 @@ depth_check
 for depth group incubations.
 
 ```{r}
-C14_hot_depth <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot_depth <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `CTD#`, `SAMPLE`, `STN`, `DEPTH`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -110,7 +110,7 @@ Notes:
 ## Read data
 
 ```{r}
-chl <- readxl::read_excel(here("0_data_used", "TAN1810_SFChla_2.0.xls"), sheet = "chla_int") %>%
+chl <- readxl::read_excel(here("0_data_used", "TAN1810_SFChla_2.1.xls"), sheet = "chla_int") %>%
   dplyr::select(NIWA_ID, U_Cast, cycle, cycle_2, time, exp, depth_corrected, Chla_0.2:Chla_20_pct)%>%
   filter(!is.na(cycle)) %>%
   rename(depth = `depth_corrected`,
