--- a/R_C14_rates calculation/2_Chl a and NPP/NPP rates calculation 2.0.Rmd
+++ b/R_C14_rates calculation/2_Chl a and NPP/NPP rates calculation 2.0.Rmd
@@ -5,7 +5,7 @@ date: "2/28/2021"
 output: pdf_document
 ---
 
-Compare the readings from the cold incubation vs standard incubation. The units is (mgC/m3/day).
+Compare the readings from the small volume (NPP_cold) vs standard incubation. The units is (mgC/m3/day).
 Calculations for NPP_cold and NPP_standard have been done to this formula: Pvol = DIC x (DPMvol/(SA x V)) x 1.05 x 1000
 NPP_cold - small vol, high C14
 NPP_standard - large vol, low C14
@@ -19,7 +19,7 @@ source(here("0_init_files", "init_markdown.R")) #for markdown libraries
 
 # Read table for C14 cold values, merge for cycle and experiment number. Add new column to indicate dark. Added missing cycle and experiment information based on voyage report.
 ```{r}
-C14_cold_raw <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Cold 14C - Pico Results", skip = 5,  n_max = 93) %>%
+C14_cold_raw <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Cold 14C - Pico Results", skip = 5,  n_max = 93) %>%
   select (`Unique code or sample identifier`,`Station`,`CTD`, `Depth m`, `Sample ID`, `DPM to full volume`, `SA_dpm_mL`, `DIC`, `Replicate`,`replicate_incubation`,  `NPP_cold`, `NPP_standard`)  %>%
   dplyr::rename(name = `Unique code or sample identifier`,
             station = `Station`,
@@ -33,7 +33,7 @@ C14_cold_raw <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_2505202
 
 
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `CTD#`, `SAMPLE`, `STN`, `DEPTH`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
