--- a/R_C14_rates calculation/3_Cell rates/Group rates calculation_2.0.Rmd
+++ b/R_C14_rates calculation/3_Cell rates/Group rates calculation_2.0.Rmd
@@ -19,6 +19,7 @@ library(dplyr)
 library(tidyverse)
 library(ggplot2)
 library(broom)
+library(here)
 ```
 
 # Denise edits
@@ -56,7 +57,7 @@ The following edits made to pico and syn data:
 
 ## Read table for pico and syn. Data points to edit are made here. 
 ```{r}
-C14_DPM <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_DPM <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -184,7 +185,7 @@ The following edits made to Nano data:
 ## Read data
 ```{r}
 # Changed the excel sheet read, with final dpm and DIC values
-C14_DPM_nano <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11)%>% 
+C14_DPM_nano <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810")%>% 
   dplyr::select (`Cycle#`, `EXP#`, SAMPLE, `Vial code             (i - initials, A to C - light incubation, D - dark)`, `sorting population`, `Cells sorted`, DPM1, DIC, `SA_dpm_mL`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
