--- a/R_C14_rates calculation/3_Cell rates/Group rates compile_2.0.Rmd
+++ b/R_C14_rates calculation/3_Cell rates/Group rates compile_2.0.Rmd
@@ -42,7 +42,7 @@ pp_rates <- readxl::read_excel(here("Output", "Raw data", "C14_rates per group_m
 # Include experiment details - CTD number
 ```{r}
 #use the "complete data TAN1810" sheet for the experiment details.
-C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `SAMPLE`, `STN`, `DEPTH`, `CTD#`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -78,11 +78,11 @@ depth_check
 - Missing U9133 - cycle 2, experiment 5. julian day 309, 5 nov 2018, station 176. Checked the FCM CTD cast number against Moira "ALL_CTDS_BottleData", missing FCM counts for this day. I have decided to take the average counts of Nov 4 and Nov 6. 
 
 ```{r}
-fcm_raw <- readxl::read_xlsx(here("0_data_used", "MD FCM DATA.xlsx"), sheet= "INITS PROFILES_CYCLE", skip = 2) %>%
+fcm_raw <- readxl::read_xlsx(here("0_data_used", "MD FCM DATA_v1.1.xlsx"), sheet= "INITS PROFILES_CYCLE", skip = 2) %>%
   select(MD, CTD, CYCLE, DEPTH_C14, `SYN/ML`, `PICO/mL`, `NANO/mL`) %>%
   dplyr::rename(cycle =`CYCLE`,
                 ctd = `CTD`,
-                depth_m = `DEPTH_C14`, # changed U9144 depth
+                depth_m = `DEPTH_C14`, 
                 Syn = `SYN/ML`,
                 Pico = `PICO/mL`,
                 Nano = `NANO/mL`) %>% 
