--- a/R_C14_rates calculation/4_Growth rates/Group-specific biomass calculations.Rmd
+++ b/R_C14_rates calculation/4_Growth rates/Group-specific biomass calculations.Rmd
@@ -30,7 +30,7 @@ colours_exp <- structure(colours_exp$colour,.Names=colours_exp$exp)
 # Read data
 ```{r, message=FALSE}
 #use the "complete data TAN1810" sheet for the experiment number
-C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.2.xlsx"), sheet = "Complete data TAN1810", skip = 11) %>%
+C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_1.3.xlsx"), sheet = "Complete data TAN1810") %>%
   dplyr::select (`Cycle#`, `EXP#`, `CTD#`, `STN`, `SAMPLE`, `DEPTH`) %>%   
      dplyr::rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -43,7 +43,7 @@ C14_hot <- readxl::read_excel(here("0_data_used", "TAN1810_14C-Pico_25052020_QA_
 
 # For live shipboard samples - syn, pico, nano
 # match CTD number to MD number
-md_meta <- readxl::read_excel(here("0_data_used", "MD_PhotoAdapt_Biomass_Rates_17MAR20.xlsx"), sheet = "Summary of PhotoAdaption ", skip = 3) %>% 
+md_meta <- readxl::read_excel(here("0_data_used", "MD_PhotoAdapt_Biomass_Rates_17MAR20_v1.1.xlsx"), sheet = "Summary of PhotoAdaption ") %>% 
   select(Station, Cast, Cycle, MD) %>%
   rename(station = Station,
          CTD = Cast,
@@ -55,13 +55,13 @@ md_meta$CTD <- sub("^", "U", md_meta$CTD) # add U before CTD number
 #loop to read all sheets except md1. missing MD8. Reading only initials for FSC of Syn, pico, nano
 md_comb<- data.frame()
 for (i in c(2:7, 9:18)) {
-md <- readxl::read_excel(here("0_data_used", "MD_PhotoAdapt_Biomass_Rates_17MAR20.xlsx"), sheet = (str_c("MD", i)), skip = 2, n_max = 8) %>%
+md <- readxl::read_excel(here("0_data_used", "MD_PhotoAdapt_Biomass_Rates_17MAR20_v1.1.xlsx"), sheet = (str_c("MD", i)), skip = 2, n_max = 8) %>%
   select('Depth','SYN MEAN FS':'NANO MEAN FS') %>%
   mutate(MD = i) %>%
   rename(depth_m = 'Depth')
  md_comb <- bind_rows(md_comb, md)
 }
-md1 <- readxl::read_excel(here("0_data_used", "MD_PhotoAdapt_Biomass_Rates_17MAR20.xlsx"), sheet = "MD1", skip = 2, n_max = 8) %>%
+md1 <- readxl::read_excel(here("0_data_used", "MD_PhotoAdapt_Biomass_Rates_17MAR20_v1.1.xlsx"), sheet = "MD1", skip = 2, n_max = 8) %>%
   select('Depth...2','SYN MEAN FS':'NANO MEAN FS') %>%
   mutate(MD = 1) %>%
   rename(depth_m = 'Depth...2')
